Add initial mold for pipes + a few handbook entries. Some bug fixes Moved some files around

--- a/PipelineMod.csproj
+++ b/PipelineMod.csproj
@@ -68,6 +68,7 @@
       <Folder Include="assets\pipelinemod\sounds\" />
       <Folder Include="assets\pipelinemod\textures\" />
       <Folder Include="src\Client\" />
+      <Folder Include="src\Patches\" />
       <Folder Include="src\Server\" />
     </ItemGroup>
 
